# SARA

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile  README.md  analysis_fault.py  extract_registers.py  gen_paper_results.py  gpgpu_inst_stats.txt  gpgpusim.config  gpgpusim_check.cmake  gpgpusim_gen_build_string.cmake  gpgpusim_gen_setup_environment.cmake  gpgpusim_install.cmake  gpgpusim_unset_cuda.cmake  register_used.txt  result.txt  run_experiment.sh  setup_environment  version.in  version_detection.mk
aerialvision/: lexyacctexteditor.py
configs/tested-cfgs/SM86_RTX3070/: gpgpusim.config
docs/: ptx_influence.md  reg_observed_analyzer.md  storage_only_mainline.md
libcuda/: CMakeLists.txt  cuda_api_object.h  cuda_runtime_api.cc  gpgpu_context.h
sara-results/: README.md
sara-results/Ampere-RTX3070/FI/AdamW/: test_result_AdamW_0-0_0_1.csv  test_result_AdamW_0-0_2_1.csv  test_result_AdamW_0-0_3_1.csv  test_result_AdamW_0-0_6_1.csv
sara-results/Ampere-RTX3070/FI/Attention/: test_result_Attention_0-0_0_1.csv  test_result_Attention_0-0_2_1.csv  test_result_Attention_0-0_3_1.csv  test_result_Attention_0-0_6_1.csv
sara-results/Ampere-RTX3070/FI/Convolution1D/: test_result_Convolution1D_0-0_0_1.csv  test_result_Convolution1D_0-0_2_1.csv  test_result_Convolution1D_0-0_3_1.csv  test_result_Convolution1D_0-0_6_1.csv
sara-results/Ampere-RTX3070/FI/Dijkstra/: test_result_Dijkstra_0-0_0_1.csv  test_result_Dijkstra_0-0_2_1.csv  test_result_Dijkstra_0-0_3_1.csv  test_result_Dijkstra_0-0_6_1.csv
sara-results/Ampere-RTX3070/FI/GESpmm/: test_result_GESpmm_0-0_0_1.csv  test_result_GESpmm_0-0_3_1.csv  test_result_GESpmm_0-0_6_1.csv
sara-results/Ampere-RTX3070/FI/Gelu/: test_result_Gelu_0-0_0_1.csv  test_result_Gelu_0-0_2_1.csv  test_result_Gelu_0-0_3_1.csv  test_result_Gelu_0-0_6_1.csv
sara-results/Ampere-RTX3070/FI/Gemm/: test_result_Gemm_0-0_0_1.csv  test_result_Gemm_0-0_3_1.csv  test_result_Gemm_0-0_6_1.csv
sara-results/Ampere-RTX3070/FI/LayerNorm/: test_result_LayerNorm_0-0_0_1.csv  test_result_LayerNorm_0-0_2_1.csv  test_result_LayerNorm_0-0_3_1.csv  test_result_LayerNorm_0-0_6_1.csv
sara-results/Ampere-RTX3070/FI/MatrixFactorization/: test_result_MatrixFactorization_0-0_0_1.csv  (+2 more)
sara-results/paper-results/: manifest.json  sdc_source_breakdown.csv  summary.md  table_iii_accuracy_overall.md  table_iv_category_error.md  table_v_speed_overall.md  table_vi_component_breakdown.md  unknown_summary.md
script/FI/: run_fi.sh  run_fi_app.sh
script/GEREM/: gerem_storage_cache.py  gerem_storage_common.py  gerem_storage_report.py  gerem_storage_rf_smem.py  gerem_storage_sampling_space.py  run_gerem_all.sh  run_gerem_app.sh
script/SARA/: app_oracle_policy.py  exact_classify_points.py  exact_core.py  exact_cpp_backend.py  exact_sdc_compute.py  exact_sdc_prepare_input.py  reg_observed_analyzer.py  run_sara.sh  run_sara_app.sh
script/SARA/native/: exact_storage_core
script/common/: campaign_exec.sh  campaign_profile.sh  cleanup_intermediate_artifacts.sh  outcome_oracle.py  parse_outputs.py  run_storage_campaign.sh  sara_gerem_fi_compare.py  sara_result_layout.py  storage_app_prebuild.sh  storage_only_sara_gerem_fi_compare.py  update_simple_summary_total_time.py
script/paper_results/: plot_fig4_fig5.py  plot_sdc_source_breakdown.py
src/: CMakeLists.txt  Makefile  abstract_hardware_model.cc  abstract_hardware_model.h
src/accelwattch/: CMakeLists.txt  mcpat.mk  xmlParser.cc
src/accelwattch/cacti/: cacti.mk
src/analysis/: exact_core_main.cc  exact_storage_main.cc  ptx_influence.cc  ptx_influence.h  ptx_influence_capi.cc  ptx_influence_capi.h
src/cuda-sim/: CMakeLists.txt  Makefile  cuda-sim.cc  instructions.cc  ptx_ir.h  ptx_sim.cc  ptx_sim.h
src/gpgpu-sim/: CMakeLists.txt  Makefile  gpu-sim.cc  gpu-sim.h  power_interface.cc  shader.cc  shader.h
src/gpuwattch/: mcpat.mk
src/gpuwattch/cacti/: cacti.mk
src/intersim2/: CMakeLists.txt  Makefile
test_apps/AdamW/: app_info.txt  size_list.txt
test_apps/AdamW/inject_app/: AdamW_0.cu
test_apps/AdamW/result_gen/: AdamW_0.cu
test_apps/Attention/: app_info.txt  size_list.txt
test_apps/Attention/inject_app/: Attention_0.cu
test_apps/Attention/result_gen/: Attention_0.cu
test_apps/Convolution1D/: app_info.txt  size_list.txt
test_apps/Convolution1D/inject_app/: Convolution1D_0.cu
test_apps/Convolution1D/result_gen/: Convolution1D_0.cu
test_apps/Dijkstra/: app_info.txt  size_list.txt
test_apps/Dijkstra/inject_app/: Dijkstra_0.cu
test_apps/Dijkstra/result_gen/: Dijkstra_0.cu
test_apps/GESpmm/: app_info.txt  size_list.txt
test_apps/GESpmm/inject_app/: GESpmm_0.cu
test_apps/GESpmm/result_gen/: GESpmm_0.cu
test_apps/Gelu/: app_info.txt  size_list.txt
test_apps/Gelu/inject_app/: Gelu_0.cu
test_apps/Gelu/result_gen/: Gelu_0.cu
test_apps/Gemm/: app_info.txt
test_apps/Gemm/inject_app/: Gemm_0.cu
test_apps/Gemm/result_gen/: Gemm_0.cu
test_apps/LayerNorm/: app_info.txt  size_list.txt
test_apps/LayerNorm/inject_app/: LayerNorm_0.cu
test_apps/LayerNorm/result_gen/: LayerNorm_0.cu
test_apps/MatrixFactorization/: app_info.txt  size_list.txt
test_apps/MatrixFactorization/inject_app/: MatrixFactorization_0.cu
test_apps/MatrixFactorization/result_gen/: MatrixFactorization_0.cu
test_apps/MatrixMultiplication/: app_info.txt  size_list.txt
test_apps/MatrixMultiplication/inject_app/: MatrixMultiplication_0.cu
test_apps/MatrixMultiplication/result_gen/: MatrixMultiplication_0.cu
test_apps/Pathfinder/: app_info.txt  size_list.txt
test_apps/Pathfinder/inject_app/: Pathfinder_0.cu
test_apps/Pathfinder/result_gen/: Pathfinder_0.cu
test_apps/Render/: app_info.txt  size_list.txt
test_apps/Render/inject_app/: Render_0.cu
test_apps/Render/result_gen/: Render_0.cu
test_apps/Softmax/: app_info.txt  size_list.txt
test_apps/Softmax/inject_app/: Softmax_0.cu
test_apps/Softmax/result_gen/: Softmax_0.cu
test_apps/Stencil1D/: app_info.txt
test_apps/Stencil1D/inject_app/: Stencil1D_0.cu
test_apps/Stencil1D/result_gen/: Stencil1D_0.cu
(+293 files in other folders)
